Fix Patron bg color in dark mode

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -224,3 +224,7 @@ input[type="color"]:focus,
 .bg-patron {
     background-color: #fffde8 !important;
 }
+
+.recent-questions {
+    border-radius: 15px !important;
+}
