--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -114,3 +114,17 @@ body {
 .fa-github {
     color: white;
 }
+
+.bg-patron {
+    background-color: #fffde857 !important;
+    
+    .text-secondary {
+        color: white !important;
+    }
+}
+
+.recent-questions {
+    span {
+        color: black;
+    }
+}
